--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[77 62 25  7 14]\n",
-      "  [64 25 20 80 44]\n",
-      "  [36 72 87 93 88]]\n",
+      "[[[ 1 64 15 81 13]\n",
+      "  [87 14 67  8 39]\n",
+      "  [88 76 65 38 73]]\n",
       "\n",
-      " [[21 98 65 19 44]\n",
-      "  [13 91 43 88  5]\n",
-      "  [34 23 84 39 71]]]\n"
+      " [[92 25 88 31 28]\n",
+      "  [35 96 56 16 95]\n",
+      "  [94 92 39 85 51]]]\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# No, we cannot directly add a and b because their shapes are different and incompatible for broadcasting.\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# No, we cannot directly add a and b because their shapes are different and incompatible for broadcasting.\u001b[39;00m\n",
       "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
      ]
     }
@@ -260,20 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[78. 63. 26.  8. 15.]\n",
-      "  [65. 26. 21. 81. 45.]\n",
-      "  [37. 73. 88. 94. 89.]]\n",
+      "[[[ 2. 65. 16. 82. 14.]\n",
+      "  [88. 15. 68.  9. 40.]\n",
+      "  [89. 77. 66. 39. 74.]]\n",
       "\n",
-      " [[22. 99. 66. 20. 45.]\n",
-      "  [14. 92. 44. 89.  6.]\n",
-      "  [35. 24. 85. 40. 72.]]]\n"
+      " [[93. 26. 89. 32. 29.]\n",
+      "  [36. 97. 57. 17. 96.]\n",
+      "  [95. 93. 40. 86. 52.]]]\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -342,21 +342,21 @@
      "output_type": "stream",
      "text": [
       "-------------------------- a --------------------------\n",
-      "[[[77 62 25  7 14]\n",
-      "  [64 25 20 80 44]\n",
-      "  [36 72 87 93 88]]\n",
+      "[[[ 1 64 15 81 13]\n",
+      "  [87 14 67  8 39]\n",
+      "  [88 76 65 38 73]]\n",
       "\n",
-      " [[21 98 65 19 44]\n",
-      "  [13 91 43 88  5]\n",
-      "  [34 23 84 39 71]]]\n",
+      " [[92 25 88 31 28]\n",
+      "  [35 96 56 16 95]\n",
+      "  [94 92 39 85 51]]]\n",
       "-------------------------- d --------------------------\n",
-      "[[[78. 63. 26.  8. 15.]\n",
-      "  [65. 26. 21. 81. 45.]\n",
-      "  [37. 73. 88. 94. 89.]]\n",
+      "[[[ 2. 65. 16. 82. 14.]\n",
+      "  [88. 15. 68.  9. 40.]\n",
+      "  [89. 77. 66. 39. 74.]]\n",
       "\n",
-      " [[22. 99. 66. 20. 45.]\n",
-      "  [14. 92. 44. 89.  6.]\n",
-      "  [35. 24. 85. 40. 72.]]]\n"
+      " [[93. 26. 89. 32. 29.]\n",
+      "  [36. 97. 57. 17. 96.]\n",
+      "  [95. 93. 40. 86. 52.]]]\n"
      ]
     }
    ],
@@ -382,22 +382,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[77., 62., 25.,  7., 14.],\n",
-       "        [64., 25., 20., 80., 44.],\n",
-       "        [36., 72., 87., 93., 88.]],\n",
+       "array([[[ 1., 64., 15., 81., 13.],\n",
+       "        [87., 14., 67.,  8., 39.],\n",
+       "        [88., 76., 65., 38., 73.]],\n",
        "\n",
-       "       [[21., 98., 65., 19., 44.],\n",
-       "        [13., 91., 43., 88.,  5.],\n",
-       "        [34., 23., 84., 39., 71.]]])"
+       "       [[92., 25., 88., 31., 28.],\n",
+       "        [35., 96., 56., 16., 95.],\n",
+       "        [94., 92., 39., 85., 51.]]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -456,16 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The max of d :  99.0\n",
-      "The min of d :  6.0\n",
-      "The mean of d :  52.06666666666667\n"
+      "The max of d :  97.0\n",
+      "The min of d :  2.0\n",
+      "The mean of d :  56.06666666666667\n"
      ]
     }
    ],
@@ -490,12 +490,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "f = np.empty((2,3,5))"
+    "f = np.empty((2, 3, 5), dtype=object)"
    ]
   },
   {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -576,21 +576,21 @@
      "output_type": "stream",
      "text": [
       "-------------------------- d --------------------------\n",
-      "[[[78. 63. 26.  8. 15.]\n",
-      "  [65. 26. 21. 81. 45.]\n",
-      "  [37. 73. 88. 94. 89.]]\n",
+      "[[[ 2. 65. 16. 82. 14.]\n",
+      "  [88. 15. 68.  9. 40.]\n",
+      "  [89. 77. 66. 39. 74.]]\n",
       "\n",
-      " [[22. 99. 66. 20. 45.]\n",
-      "  [14. 92. 44. 89.  6.]\n",
-      "  [35. 24. 85. 40. 72.]]]\n",
+      " [[93. 26. 89. 32. 29.]\n",
+      "  [36. 97. 57. 17. 96.]\n",
+      "  [95. 93. 40. 86. 52.]]]\n",
       "-------------------------- f --------------------------\n",
-      "[[[ 75.  75.  25.  25.  25.]\n",
-      "  [ 75.  25.  25.  75.  25.]\n",
-      "  [ 25.  75.  75.  75.  75.]]\n",
+      "[[[0 75 25 75 25]\n",
+      "  [75 25 75 25 25]\n",
+      "  [75 75 75 25 75]]\n",
       "\n",
-      " [[ 25. 100.  75.  25.  25.]\n",
-      "  [ 25.  75.  25.  75.   0.]\n",
-      "  [ 25.  25.  75.  25.  75.]]]\n"
+      " [[75 25 75 25 25]\n",
+      "  [25 100 75 25 75]\n",
+      "  [75 75 25 75 25]]]\n"
      ]
     }
    ],
@@ -620,20 +620,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['D' 'D' 'B' 'B' 'B']\n",
-      "  ['D' 'B' 'B' 'D' 'B']\n",
-      "  ['B' 'D' 'D' 'D' 'D']]\n",
+      "[[['A' 'D' 'B' 'D' 'B']\n",
+      "  ['D' 'B' 'D' 'B' 'B']\n",
+      "  ['D' 'D' 'D' 'B' 'D']]\n",
       "\n",
-      " [['B' 'E' 'D' 'B' 'B']\n",
-      "  ['B' 'D' 'B' 'D' 'A']\n",
-      "  ['B' 'B' 'D' 'B' 'D']]]\n"
+      " [['D' 'B' 'D' 'B' 'B']\n",
+      "  ['B' 'E' 'D' 'B' 'D']\n",
+      "  ['D' 'D' 'B' 'D' 'B']]]\n"
      ]
     }
    ],
