--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +34,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Version: 2.2.2\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/reema/anaconda3/envs/ironhack/Library/include\n",
+      "    lib directory: C:/Users/reema/anaconda3/envs/ironhack/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_56qrev29w_\\croot\\numpy_and_numpy_base_1738155838326\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/reema/anaconda3/envs/ironhack/Library/include\n",
+      "    lib directory: C:/Users/reema/anaconda3/envs/ironhack/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_56qrev29w_\\croot\\numpy_and_numpy_base_1738155838326\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30158\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30158\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.11\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_56qrev29w_\\croot\\numpy_and_numpy_base_1738155838326\\_h_env\\python.exe\n",
+      "  version: '3.10'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"NumPy Version:\", np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.randint(0, 100, (2, 3, 5))  # Random integers from 0 to 99"
    ]
   },
   {
@@ -68,11 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 2 84  7 18 88]\n",
+      "  [ 5 65 29 67 59]\n",
+      "  [38 14 28 60  3]]\n",
+      "\n",
+      " [[52  9  2  1 69]\n",
+      "  [65  9 21 33 32]\n",
+      "  [98 14 77 98 48]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))"
    ]
   },
   {
@@ -102,11 +195,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)"
    ]
   },
   {
@@ -119,11 +233,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of a: 30\n",
+      "Size of b: 30\n",
+      "a and b have the same size.\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"Size of a:\", a.size)\n",
+    "print(\"Size of b:\", b.size)\n",
+    "\n",
+    "if a.size == b.size:\n",
+    "    print(\"a and b have the same size.\")\n",
+    "else:\n",
+    "    print(\"a and b do not have the same size.\")"
    ]
   },
   {
@@ -136,11 +266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of a: (2, 3, 5)\n",
+      "Shape of b: (5, 2, 3)\n",
+      "Error: operands could not be broadcast together with shapes (2,3,5) (5,2,3) \n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"Shape of a:\", a.shape)  \n",
+    "print(\"Shape of b:\", b.shape)  \n",
+    "\n",
+    "try:\n",
+    "    c = a + b\n",
+    "    print(\"Addition successful!\")\n",
+    "except ValueError as e:\n",
+    "    print(\"Error:\", e)"
    ]
   },
   {
@@ -154,11 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of a: (2, 3, 5)\n",
+      "Shape of b before transpose: (5, 2, 3)\n",
+      "Shape of c after transpose: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "c = np.transpose(b, (1, 2, 0))\n",
+    "\n",
+    "print(\"Shape of a:\", a.shape)\n",
+    "print(\"Shape of b before transpose:\", b.shape)  # (5,2,3)\n",
+    "print(\"Shape of c after transpose:\", c.shape) "
    ]
   },
   {
@@ -171,11 +332,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of a: (2, 3, 5)\n",
+      "Shape of c: (2, 3, 5)\n",
+      "Shape of d: (2, 3, 5)\n",
+      "\n",
+      " Result (d):\n",
+      " [[[ 3. 85.  8. 19. 89.]\n",
+      "  [ 6. 66. 30. 68. 60.]\n",
+      "  [39. 15. 29. 61.  4.]]\n",
+      "\n",
+      " [[53. 10.  3.  2. 70.]\n",
+      "  [66. 10. 22. 34. 33.]\n",
+      "  [99. 15. 78. 99. 49.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d= a + c\n",
+    "print(\"Shape of a:\", a.shape) \n",
+    "print(\"Shape of c:\", c.shape)  \n",
+    "print(\"Shape of d:\", d.shape)  \n",
+    "print(\"\\n Result (d):\\n\", d)"
    ]
   },
   {
@@ -188,12 +372,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a: \n",
+      "  [[[ 2 84  7 18 88]\n",
+      "  [ 5 65 29 67 59]\n",
+      "  [38 14 28 60  3]]\n",
+      "\n",
+      " [[52  9  2  1 69]\n",
+      "  [65  9 21 33 32]\n",
+      "  [98 14 77 98 48]]]\n",
+      "Array d: \n",
+      "  [[[ 3. 85.  8. 19. 89.]\n",
+      "  [ 6. 66. 30. 68. 60.]\n",
+      "  [39. 15. 29. 61.  4.]]\n",
+      "\n",
+      " [[53. 10.  3.  2. 70.]\n",
+      "  [66. 10. 22. 34. 33.]\n",
+      "  [99. 15. 78. 99. 49.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nDifference Between a and d:\\n1. Shape Comparison\\nSame shape: Both arrays have the exact same structure (2,3,5).\\n2. Value Relationship\\nValues in d are all shifted up by 1 compared to a.\\nNo values changed in position, only increased in magnitude by a fixed amount\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(\"Array a: \\n \",a)\n",
+    "print(\"Array d: \\n \",d)\n",
+    "\n",
+    "\"\"\"\n",
+    "Difference Between a and d:\n",
+    "1. Shape Comparison\n",
+    "Same shape: Both arrays have the exact same structure (2,3,5).\n",
+    "2. Value Relationship\n",
+    "Values in d are all shifted up by 1 compared to a.\n",
+    "No values changed in position, only increased in magnitude by a fixed amount\n",
+    "\"\"\""
    ]
   },
   {
@@ -206,11 +434,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 2. 84.  7. 18. 88.]\n",
+      "  [ 5. 65. 29. 67. 59.]\n",
+      "  [38. 14. 28. 60.  3.]]\n",
+      "\n",
+      " [[52.  9.  2.  1. 69.]\n",
+      "  [65.  9. 21. 33. 32.]\n",
+      "  [98. 14. 77. 98. 48.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n",
+    "print (e)"
    ]
   },
   {
@@ -224,12 +467,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, e is equal to a.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n If c contained values other than 1, e would have different values.\\nBut because c is filled with ones, e remains the same as a.\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "if np.array_equal(e, a):\n",
+    "    print(\"Yes, e is equal to a.\")\n",
+    "else:\n",
+    "    print(\"No, e is not equal to a.\")\n",
+    "\n",
+    "\"\"\"\n",
+    " If c contained values other than 1, e would have different values.\n",
+    "But because c is filled with ones, e remains the same as a.\n",
+    "\"\"\""
    ]
   },
   {
@@ -243,12 +513,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum value in d: 99.0\n",
+      "Minimum value in d: 2.0\n",
+      "Mean value in d: 40.833333333333336\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "print(\"Maximum value in d:\", d_max)\n",
+    "print(\"Minimum value in d:\", d_min)\n",
+    "print(\"Mean value in d:\", d_mean)"
    ]
   },
   {
@@ -261,11 +545,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[4627730092099895296 4634978072750194688 4627730092099895296\n",
+      "   4627730092099895296 4634978072750194688]\n",
+      "  [4627730092099895296 4634978072750194688 4627730092099895296\n",
+      "   4634978072750194688 4634978072750194688]\n",
+      "  [4627730092099895296 4627730092099895296 4627730092099895296\n",
+      "   4634978072750194688 4627730092099895296]]\n",
+      "\n",
+      " [[4634978072750194688 4627730092099895296 4627730092099895296\n",
+      "   4607182418800017408 4634978072750194688]\n",
+      "  [4634978072750194688 4627730092099895296 4627730092099895296\n",
+      "   4627730092099895296 4627730092099895296]\n",
+      "  [4636737291354636288 4627730092099895296 4634978072750194688\n",
+      "   4636737291354636288 4634978072750194688]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty_like(d , dtype = int) \n",
+    "print (f)"
    ]
   },
   {
@@ -287,11 +592,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labeled array f:\n",
+      " [[[ 25  75  25  25  75]\n",
+      "  [ 25  75  25  75  75]\n",
+      "  [ 25  25  25  75  25]]\n",
+      "\n",
+      " [[ 75  25  25   0  75]\n",
+      "  [ 75  25  25  25  25]\n",
+      "  [100  25  75 100  75]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f[d == d_min] = 0       \n",
+    "f[(d > d_min) & (d < d_mean)] = 25  \n",
+    "f[d == d_mean] = 50   \n",
+    "f[(d > d_mean) & (d < d_max)] = 75 \n",
+    "f[d == d_max] = 100    \n",
+    "\n",
+    "print(\"Labeled array f:\\n\", f)"
    ]
   },
   {
@@ -325,11 +651,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      " [[[ 3. 85.  8. 19. 89.]\n",
+      "  [ 6. 66. 30. 68. 60.]\n",
+      "  [39. 15. 29. 61.  4.]]\n",
+      "\n",
+      " [[53. 10.  3.  2. 70.]\n",
+      "  [66. 10. 22. 34. 33.]\n",
+      "  [99. 15. 78. 99. 49.]]]\n",
+      "\n",
+      "Labeled array f:\n",
+      " [[[ 25  75  25  25  75]\n",
+      "  [ 25  75  25  75  75]\n",
+      "  [ 25  25  25  75  25]]\n",
+      "\n",
+      " [[ 75  25  25   0  75]\n",
+      "  [ 75  25  25  25  25]\n",
+      "  [100  25  75 100  75]]]\n",
+      "\n",
+      "Unique values in f: [  0  25  75 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "# Print d and f\n",
+    "print(\"Array d:\\n\", d)\n",
+    "print(\"\\nLabeled array f:\\n\", f)\n",
+    "\n",
+    "# Check if f contains only the expected values\n",
+    "print(\"\\nUnique values in f:\", np.unique(f))\n"
    ]
   },
   {
@@ -350,17 +707,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labeled array f (with strings):\n",
+      " [[['B' 'D' 'B' 'B' 'D']\n",
+      "  ['B' 'D' 'B' 'D' 'D']\n",
+      "  ['B' 'B' 'B' 'D' 'B']]\n",
+      "\n",
+      " [['D' 'B' 'B' 'A' 'D']\n",
+      "  ['D' 'B' 'B' 'B' 'B']\n",
+      "  ['E' 'B' 'D' 'E' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f_str = np.empty(d.shape, dtype=str)  \n",
+    "\n",
+    "f_str[f == 0] = 'A'     \n",
+    "f_str[f == 25] = 'B'    \n",
+    "f_str[f == 50] = 'C'   \n",
+    "f_str[f == 75] = 'D'   \n",
+    "f_str[f == 100] = 'E'  \n",
+    "\n",
+    "print(\"Labeled array f (with strings):\\n\", f_str)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -374,9 +754,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
