Update main file

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/shosh/.conda/envs/Ironhack/Library/include\n",
+      "    lib directory: C:/Users/shosh/.conda/envs/Ironhack/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep2252572576928\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.9'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "print(np.show_config())"
    ]
   },
   {
@@ -51,11 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.random((2,3,5))"
    ]
   },
   {
@@ -68,11 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.92236598 0.41513418 0.1906678  0.1231469  0.60877834]\n",
+      "  [0.51262052 0.49400178 0.50222432 0.97463504 0.99546329]\n",
+      "  [0.63667862 0.04101866 0.05141674 0.02375829 0.019365  ]]\n",
+      "\n",
+      " [[0.93556733 0.8853481  0.48918681 0.72645761 0.7566407 ]\n",
+      "  [0.80058499 0.33372087 0.31399865 0.72457679 0.41168059]\n",
+      "  [0.26436609 0.65655837 0.87308013 0.79575626 0.1669057 ]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a.size == b.size)"
    ]
   },
   {
@@ -136,11 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a + b\n",
+    "# operands could not be broadcast together with shapes (2,3,5) (5,2,3)"
    ]
   },
   {
@@ -154,11 +299,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = np.transpose(b, (1,2,0))\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 5)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.shape"
    ]
   },
   {
@@ -171,11 +352,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "# Now we can add a and c because they have the same shape (2,3,5)"
    ]
   },
   {
@@ -188,11 +371,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array a is : \n",
+      "[[[0.92236598 0.41513418 0.1906678  0.1231469  0.60877834]\n",
+      "  [0.51262052 0.49400178 0.50222432 0.97463504 0.99546329]\n",
+      "  [0.63667862 0.04101866 0.05141674 0.02375829 0.019365  ]]\n",
+      "\n",
+      " [[0.93556733 0.8853481  0.48918681 0.72645761 0.7566407 ]\n",
+      "  [0.80058499 0.33372087 0.31399865 0.72457679 0.41168059]\n",
+      "  [0.26436609 0.65655837 0.87308013 0.79575626 0.1669057 ]]]\n",
+      " array b is : \n",
+      " [[[1.92236598 1.41513418 1.1906678  1.1231469  1.60877834]\n",
+      "  [1.51262052 1.49400178 1.50222432 1.97463504 1.99546329]\n",
+      "  [1.63667862 1.04101866 1.05141674 1.02375829 1.019365  ]]\n",
+      "\n",
+      " [[1.93556733 1.8853481  1.48918681 1.72645761 1.7566407 ]\n",
+      "  [1.80058499 1.33372087 1.31399865 1.72457679 1.41168059]\n",
+      "  [1.26436609 1.65655837 1.87308013 1.79575626 1.1669057 ]]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The difference between arrays a and b is that a contains random real values between 0 and 1,\\nwhile b has constant values of 1 in every element. \\nThe relationship between the arrays is that a contains varying data, \\nwhereas b is constant across all elements.'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "print(f\"array a is : \\n{a}\\n array b is : \\n {d}\\n\")\n",
+    "\n",
+    "\"\"\"The array a contains random floating-point values, while the array d consists entirely of ones.\n",
+    "The relation between the two arrays is that d is used as a matrix of ones,\n",
+    "and when operations are performed between a and d,\n",
+    "the result is influenced by the values in a since multiplying any value by 1 will leave it unchanged.\n",
+    "This is the key difference: a holds varying data, while d is constant and uniform.\"\"\"\n",
     "\n"
    ]
   },
@@ -206,11 +430,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.92236598 0.41513418 0.1906678  0.1231469  0.60877834]\n",
+      "  [0.51262052 0.49400178 0.50222432 0.97463504 0.99546329]\n",
+      "  [0.63667862 0.04101866 0.05141674 0.02375829 0.019365  ]]\n",
+      "\n",
+      " [[0.93556733 0.8853481  0.48918681 0.72645761 0.7566407 ]\n",
+      "  [0.80058499 0.33372087 0.31399865 0.72457679 0.41168059]\n",
+      "  [0.26436609 0.65655837 0.87308013 0.79575626 0.1669057 ]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c\n",
+    "print(e)"
    ]
   },
   {
@@ -224,12 +464,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]],\n",
+       "\n",
+       "       [[ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True],\n",
+       "        [ True,  True,  True,  True,  True]]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "e == a\n",
+    "\"\"\" Since array c is the transpose of array b, it has the same shape as a.\n",
+    "When we multiplied them together, the multiplication was allowed between a and c,\n",
+    "and when we assigned them to e, the result matched the values of a because all the values in c are equal to 1.\"\"\""
    ]
   },
   {
@@ -243,12 +503,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max: 1.9954632884475318\n",
+      "Min: 1.019364996831173\n",
+      "Mean: 1.521523481624529\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(\"Max:\", d_max)\n",
+    "print(\"Min:\", d_min)\n",
+    "print(\"Mean:\", d_mean)\n"
    ]
   },
   {
@@ -261,11 +537,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.92236598 1.41513418 1.1906678  1.1231469  1.60877834]\n",
+      "  [1.51262052 1.49400178 1.50222432 1.97463504 1.99546329]\n",
+      "  [1.63667862 1.04101866 1.05141674 1.02375829 1.019365  ]]\n",
+      "\n",
+      " [[1.93556733 1.8853481  1.48918681 1.72645761 1.7566407 ]\n",
+      "  [1.80058499 1.33372087 1.31399865 1.72457679 1.41168059]\n",
+      "  [1.26436609 1.65655837 1.87308013 1.79575626 1.1669057 ]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty(d.shape)\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +579,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 75.  25.  25.  25.  75.]\n",
+      "  [ 25.  25.  25.  75. 100.]\n",
+      "  [ 75.  25.  25.  25.   0.]]\n",
+      "\n",
+      " [[ 75.  75.  25.  75.  75.]\n",
+      "  [ 75.  25.  25.  75.  25.]\n",
+      "  [ 25.  75.  75.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "d_max = np.max(d)\n",
+    "\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "for i in range(d.shape[0]):  \n",
+    "    for j in range(d.shape[1]):  \n",
+    "        for k in range(d.shape[2]):  \n",
+    "            value = d[i, j, k]\n",
+    "            if value == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif value == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif value == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d_min < value < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < value < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +653,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d is:\n",
+      "[[[1.92236598 1.41513418 1.1906678  1.1231469  1.60877834]\n",
+      "  [1.51262052 1.49400178 1.50222432 1.97463504 1.99546329]\n",
+      "  [1.63667862 1.04101866 1.05141674 1.02375829 1.019365  ]]\n",
+      "\n",
+      " [[1.93556733 1.8853481  1.48918681 1.72645761 1.7566407 ]\n",
+      "  [1.80058499 1.33372087 1.31399865 1.72457679 1.41168059]\n",
+      "  [1.26436609 1.65655837 1.87308013 1.79575626 1.1669057 ]]]\n",
+      "\n",
+      "Array f is:\n",
+      "[[[ 75.  25.  25.  25.  75.]\n",
+      "  [ 25.  25.  25.  75. 100.]\n",
+      "  [ 75.  25.  25.  25.   0.]]\n",
+      "\n",
+      " [[ 75.  75.  25.  75.  75.]\n",
+      "  [ 75.  25.  25.  75.  25.]\n",
+      "  [ 25.  75.  75.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(f\"Array d is:\\n{d}\")\n",
+    "print(f\"\\nArray f is:\\n{f}\")"
    ]
   },
   {
@@ -350,11 +704,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Array f is:\n",
+      "[[['D' 'B' 'B' 'B' 'D']\n",
+      "  ['B' 'B' 'B' 'D' 'E']\n",
+      "  ['D' 'B' 'B' 'B' 'A']]\n",
+      "\n",
+      " [['D' 'D' 'B' 'D' 'D']\n",
+      "  ['D' 'B' 'B' 'D' 'B']\n",
+      "  ['B' 'D' 'D' 'D' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "f = np.empty_like(d, dtype=object)\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            # Assign labels based on the conditions\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = \"A\"\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = \"B\"\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = \"C\"\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = \"D\"\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = \"E\"\n",
+    "\n",
+    "print(f\"\\nArray f is:\\n{f}\")\n"
    ]
   }
  ],
@@ -374,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
