--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np "
    ]
   },
   {
@@ -34,11 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'numpy.version' from 'c:\\\\Users\\\\STARS\\\\anaconda3\\\\Lib\\\\site-packages\\\\numpy\\\\version.py'>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "np.version"
    ]
   },
   {
@@ -51,11 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.array([2,3,5])\n",
+    "x = np.random.randint(3,size=(2,3,5))"
    ]
   },
   {
@@ -68,11 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[2, 0, 1, 0, 0],\n",
+       "        [0, 2, 2, 2, 0],\n",
+       "        [2, 1, 0, 2, 1]],\n",
+       "\n",
+       "       [[2, 1, 2, 2, 2],\n",
+       "        [1, 1, 2, 1, 1],\n",
+       "        [2, 1, 2, 2, 0]]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a\n",
+    "x"
    ]
   },
   {
@@ -85,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b= np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +132,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print (b)"
    ]
   },
   {
@@ -119,11 +170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not equle\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "if a.shape==b.shape:\n",
+    "    print (\"same\")\n",
+    "else:\n",
+    "    print(\"not equle\")    "
    ]
   },
   {
@@ -136,11 +198,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[3., 4., 6.],\n",
+       "        [3., 4., 6.]],\n",
+       "\n",
+       "       [[3., 4., 6.],\n",
+       "        [3., 4., 6.]],\n",
+       "\n",
+       "       [[3., 4., 6.],\n",
+       "        [3., 4., 6.]],\n",
+       "\n",
+       "       [[3., 4., 6.],\n",
+       "        [3., 4., 6.]],\n",
+       "\n",
+       "       [[3., 4., 6.],\n",
+       "        [3., 4., 6.]]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "result = a + b\n",
+    "result"
    ]
   },
   {
@@ -154,11 +241,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "#b = np.random.randint(3, size=(2, 3, 5))\n",
+    "c=np.transpose(b,(1,2,0))\n",
+    "print(b)"
    ]
   },
   {
@@ -171,11 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,) (2,3,5) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[81], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m d \u001b[38;5;241m=\u001b[39m a \u001b[38;5;241m+\u001b[39m c\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (2,3,5) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c "
    ]
   },
   {
@@ -188,12 +310,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(d)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(d)"
    ]
   },
   {
@@ -206,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
